# whatsong

./: .gitignore  Cargo.toml  LICENSE  install.ps1
src/: database.rs  error.rs  lib.rs  util.rs  youtube.rs
src/addon/: background.js  install.reg  manifest.json  whatsong.json
src/server/: error.rs  handlers.rs  http.rs  mod.rs  routes.rs
src/sql/: schema.sql
src/sql/youtube/: add_video.sql  get_all.sql  get_current.sql  get_previous.sql
