[package]
name = "whatsong"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[[bin]]
name = "whatsong_server"
path = "src/bin/server.rs"

[[bin]]
name = "whatsong_bot"
path = "src/bin/bot.rs"

[dependencies]
log = "0.4.8"
flexi_logger = "0.14.4"
thiserror = "1.0.2"

once_cell = "1.2.0"
regex = "1.3.1"
rusqlite = { version = "0.20.0", features = ["bundled"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
toml = { version = "0.5.3", features = ["preserve_order"] }
directories = "2.0.2"

attohttpc = { version = "0.4.5", features = ["json"] }
chrono = "0.4.9"

# for the bot
twitchchat = "0.7.2"

# for the server
warp = { version = "0.1.20", default-features = false }
futures = "0.1.29"
tokio = { version = "0.1.22", default-features = false, features = ["rt-full"] }
http = "0.1.19"

