[package]
name = "whatsong"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[[bin]]
name = "whatsong_server"
path = "src/bin/server.rs"

[dependencies]
log = "0.4.8"
flexi_logger = "0.15.1"
thiserror = "1.0.11"

once_cell = "1.3.1"
regex = "1.3.5"
rusqlite = { version = "0.21.0", features = ["bundled"] }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
toml = { version = "0.5.6", features = ["preserve_order"] }
directories = "2.0.2"

attohttpc = { version = "0.12.0", features = ["json"] }
chrono = "0.4.11"

# for the bot
twitchchat = "0.9.2"

# for the server
warp = { version = "0.2.2", default-features = false }
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["full"] }
http = "0.2.0"

