[package]
name = "whatsong"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[[bin]]
name = "whatsong"
path = "src/bin/main.rs"

[dependencies]
alto_logger     = "0.1.2"
anyhow          = "1.0.27"
async-trait     = "0.1.24"
dirs            = "2.0.2"
log             = { version = "0.4.8", features = ["std"] }
once_cell       = "1.3.1"
regex           = { version = "1.3.5", default-features = false, features = ["std", "perf"] }
reqwest         = { version = "0.10.4", default-features = false, features = ["rustls-tls", "json"] }
rusqlite        = { version = "0.21.0", features = ["bundled"] }
serde           = { version = "1.0.105", features = ["derive"] }
serde_json      = "1.0.48"
simple_env_load = "0.1.0"
tokio           = { version = "0.2.13", features = ["macros", "rt-threaded"] }
warp            = { version = "0.2.2", default-features = false }

# don't optimize the c library
[profile.release.package.libsqlite3-sys]
debug = 0
opt-level = 0

[profile.release.build-override]
opt-level = 0

[patch.crates-io]
mio = { git = "https://github.com/museun/mio", branch = "winapi03"}
